# TuringVillage2

./: .gitignore  CMakeLists.txt  CMakePresets.json
libs/GLAD/: CMakeLists.txt
libs/GLAD/include/glad/: glad.h
libs/GLAD/src/: glad.c
src/: camera.hpp  cursor.cpp  cursor.hpp  main.cpp  maths.hpp  raii.hpp  village.cpp  village.hpp  villager.cpp  villager.hpp  window.cpp  window.hpp
src/gl/: buffer.cpp  buffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/gl/shader/: connection_line.cpp  connection_line.hpp  core.cpp  core.hpp  helper.cpp  helper.hpp  quad.cpp  quad.hpp
